deployment/projects/forage/.forest/deployment/dev/flux-dev.*/forest/flux@1/10-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    app.kubernetes.io/name: forage
    app.kubernetes.io/managed-by: forest
