deployment/projects/forage/.forest/deployment/dev/flux-dev.*/forest/flux@1/30-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forage
  namespace: dev
  labels:
    app.kubernetes.io/name: forage
    app.kubernetes.io/component: server
    app.kubernetes.io/managed-by: forest
    forest.sh/managed: "true"
    forest.sh/project: "forage"
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: forage
      app.kubernetes.io/component: server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: forage
        app.kubernetes.io/component: server
    spec:
      containers:
        - name: forage
          image: git.kjuulh.io/kjuulh/forage:latest
          ports:
            - name: 
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: forage
  namespace: dev
  labels:
    app.kubernetes.io/name: forage
    app.kubernetes.io/component: server
    app.kubernetes.io/managed-by: forest
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: forage
    app.kubernetes.io/component: server
  ports:
    - name: 
      port: 3000
      targetPort: 3000
      protocol: TCP
